.k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: koto-ingress1
spec:
  rules:
  - host: central.koto.at
    http:
      paths:
      - backend:
          serviceName: user-hub-service
          servicePort: 12001
  - host: node1.koto.at
    http:
      paths:
      - backend:
          serviceName: message-hub-service
          servicePort: 12002
  - host: koto.at
    http:
      paths:
      - backend:
          serviceName: frontend-service
          servicePort: 80
